--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "gatsby": "^3.9.1",
     "gatsby-plugin-sass": "^4.9.0",
+    "gatsby-source-filesystem": "^2.0.28",
+    "gatsby-transformer-remark": "^4.6.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
